--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "html2canvas": "latest",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
-    "jspdf": "^3.0.4",
-    "jspdf-autotable": "^5.0.2",
+    "jspdf": "latest",
     "lucide-react": "^0.525.0",
     "multer": "^2.0.2",
     "next": "15.3.4",
